src/test/ui/issues/issue-22560.stderr
error[E0393]: the type parameter `Rhs` must be explicitly specified
  --> $DIR/issue-22560.rs:6:13
   |
LL |             Sub;
   |             ^^^ missing reference to `Rhs`
   |
   = note: because of the default `Self` reference, type parameters must be specified on object types

error[E0393]: the type parameter `Rhs` must be explicitly specified
  --> $DIR/issue-22560.rs:3:17
   |
LL | type Test = dyn Add +
   |                 ^^^ missing reference to `Rhs`
   |
   = note: because of the default `Self` reference, type parameters must be specified on object types

error[E0225]: only auto traits can be used as additional traits in a trait object
  --> $DIR/issue-22560.rs:6:13
   |
LL | type Test = dyn Add +
   |                 ---
   |                 |
   |                 first non-auto trait
   |                 trait alias used in trait object type (first use)
...
LL |             Sub;
   |             ^^^
   |             |
   |             additional non-auto trait
   |             trait alias used in trait object type (additional use)

error[E0191]: the value of the associated types `Output` (from the trait `std::ops::Add`), `Output` (from the trait `std::ops::Sub`) must be specified
  --> $DIR/issue-22560.rs:3:13
   |
LL |   type Test = dyn Add +
   |  _____________^
   | |_____________|
   | |
LL | |
LL | |
LL | |             Sub;
   | |               ^
   | |_______________|
   | |_______________associated type `Output` must be specified
   |                 associated type `Output` must be specified

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0191, E0225, E0393.
For more information about an error, try `rustc --explain E0191`.
